--- a/META.yml
+++ b/META.yml
@@ -2,11 +2,15 @@
 abstract: 'OS-process-related routines'
 author:
   - 'Steven Haryanto <stevenharyanto@gmail.com>'
-build_requires: {}
+build_requires:
+  File::Spec: 0
+  IO::Handle: 0
+  IPC::Open3: 0
+  Test::More: 0.98
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.131560'
+generated_by: 'Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.132140'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,4 +21,4 @@ requires:
 resources:
   homepage: http://metacpan.org/release/SHARYANTO-Proc-Util/
   repository: http://github.com/sharyanto/perl-SHARYANTO-Proc-Util
-version: 0.56
+version: 0.57
