--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.56
+version = 0.57
 
 name    = SHARYANTO-Proc-Util
 author  = Steven Haryanto <stevenharyanto@gmail.com>
@@ -12,7 +12,7 @@ repository  = http://github.com/sharyanto/perl-SHARYANTO-Proc-Util
 [@SHARYANTO]
 
 [Prereqs / TestRequires]
-;Test::More=0.98
+Test::More=0.98
 
 [Prereqs]
 perl=5.010001
