Import of SHARYANTO/SHARYANTO-Proc-Util-0.58 from CPAN.
gitpan-cpan-distribution: SHARYANTO-Proc-Util
gitpan-cpan-version:      0.58
gitpan-cpan-path:         SHARYANTO/SHARYANTO-Proc-Util-0.58.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,17 +1,15 @@
-version = 0.57
+version = 0.58
 
 name    = SHARYANTO-Proc-Util
 author  = Steven Haryanto <stevenharyanto@gmail.com>
 license = Perl_5
 copyright_holder = Steven Haryanto
 
-[MetaResources]
-homepage    = http://metacpan.org/release/SHARYANTO-Proc-Util/
-repository  = http://github.com/sharyanto/perl-SHARYANTO-Proc-Util
-
-[@SHARYANTO]
+[@Author::SHARYANTO]
+:version=0.09
 
 [Prereqs / TestRequires]
+File::Which=0
 Test::More=0.98
 
 [Prereqs]
