--- a/META.yml
+++ b/META.yml
@@ -4,13 +4,14 @@ author:
   - 'Steven Haryanto <stevenharyanto@gmail.com>'
 build_requires:
   File::Spec: 0
+  File::Which: 0
   IO::Handle: 0
   IPC::Open3: 0
   Test::More: 0.98
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300035, CPAN::Meta::Converter version 2.132140'
+generated_by: 'Dist::Zilla version 4.300038, CPAN::Meta::Converter version 2.132510'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,6 +20,7 @@ name: SHARYANTO-Proc-Util
 requires:
   perl: 5.010001
 resources:
-  homepage: http://metacpan.org/release/SHARYANTO-Proc-Util/
-  repository: http://github.com/sharyanto/perl-SHARYANTO-Proc-Util
-version: 0.57
+  bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=SHARYANTO-Proc-Util
+  homepage: https://metacpan.org/release/SHARYANTO-Proc-Util
+  repository: git://github.com/sharyanto/perl-SHARYANTO-Proc-Util.git
+version: 0.58
